# data_collector

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_funcional.py  test_integracao.py
