[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["gabrielpastega <gabrielpbreis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest = "^8.1.1"
email-validator = "^2.1.1"
selenium = "^4.18.1"
taskipy = "^1.12.2"
openpyxl = "^3.1.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.taskipy.tasks]
run = "lsof -ti :8501 | xargs kill -9 | streamlit run src/app.py"
test = "lsof -ti :8501 | xargs kill -9 | pytest tests -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
